# eigen-cont-malloc

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  analysis.py  data.h  main.cpp  parallel.cpp
data/: par_nomove.json  parallel-marchnative.json  parallel-nomarchnative.json  parallel.json
notebooks/: analysis.py
src/: bench.cpp  contig_data.h  data.h  main.cpp  par.cpp  parallel.cpp  test_pmr.cpp
src/lib/: common.h  contig_data.cpp  contig_data.h  data.cpp  data.h  mem_req.h  pmr_data.cpp  pmr_data.h
